--- a/first.html
+++ b/first.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Demo css</title>
+    <style>
+        .firstClass{
+            background-color: rgb(62, 180, 107);
+        }
+        p{
+            border:2px solid red;
+            /* width:200px;
+            height: 29px; */
+        }
+    </style>
+</head>
+<body>
+    <h1 style="text-align: center ;color: red;">This is my demo css</h1>
+    <div class="firstClass" >
+        <h3 style="text-align: center;">this is css</h3>
+        <p id="firstId">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi eveniet nulla, facere quo delectus vitae? Delectus dignissimos
+             sed accusamus reiciendis expedita maiores sequi illum doloribus ex mollitia! Debitis consequatur explicabo quo, mollitia nisi sequi.
+        </p>
+        <p style="text-align: center;">this is new paragraph</p>
+    </div>
+</body>
+</html>
