--- a/firstGithub.html
+++ b/firstGithub.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>html and css pro</title>
+    <style>
+        .bodyClass{
+            background-color: rgb(37, 175, 49);
+        }
+        .check{
+            background-color: aqua;
+            margin: 10px;
+            padding: 0;
+        }
+        #firstId{
+            border: 2px solid green;
+            width: auto;
+            background-color: rgb(13, 191, 204);
+        }
+        .secClass ul li{
+            background-color: indigo;
+            font-family: 'Courier New', Courier, monospace;
+            font-size: large;
+        }
+    </style>
+</head>
+<body class="bodyClass">
+    <h1 id="firstId" style="text-align: center;">This is my picture</h1>
+    <div class="check" style="text-align: center ; color: rgb(224, 14, 14);"> 
+        <img src="image.jpg" width="600px" height="500px" alt="not"><img src="image.jpg" width="650px" height="500px" alt="not"></div>
+    <div class="secClass">
 
+        <ul>
+            <li><h2 style="text-align: center; color: rgb(125, 223, 28);">Name:Vikash Kumar</h2></li>
+            <li><h2 style="text-align: center;color:rgb(125, 223, 28);">Branch:Computer Science and Engineering</h2></li>
+        </ul>
+    </div>
+</body>
+</html>
